# pingouin_sample

./: README.md  pyproject.toml
notebook/: eda.ipynb
